[gd_scene load_steps=9 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://textures/enemy.png" type="Texture" id=2]
[ext_resource path="res://sfx/Teleport_3.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 4.61465

[sub_resource type="CircleShape2D" id=2]
radius = 3.88911

[sub_resource type="CircleShape2D" id=3]
radius = 11.8553

[sub_resource type="Animation" id=4]
resource_name = "walk_down"
length = 0.6
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 16, 16 ), Rect2( 16, 0, 16, 16 ), Rect2( 32, 0, 16, 16 ), Rect2( 48, 0, 16, 16 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk_up"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 16, 16, 16 ), Rect2( 16, 16, 16, 16 ), Rect2( 32, 16, 16, 16 ), Rect2( 48, 16, 16, 16 ) ]
}

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.0556812, -1.72612 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="ChaseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea"]
shape = SubResource( 3 )

[node name="rayDOWN" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 5 )

[node name="rayUP" type="RayCast2D" parent="."]
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 5 )

[node name="rayLEFT" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 5 )

[node name="rayRIGHT" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 5 )

[node name="hit" type="AudioStreamPlayer" parent="."]
process_priority = 1
stream = ExtResource( 3 )
volume_db = -20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/walk_down = SubResource( 4 )
anims/walk_up = SubResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="ChaseArea" to="." method="_on_ChaseArea_body_entered"]
[connection signal="body_exited" from="ChaseArea" to="." method="_on_ChaseArea_body_exited"]
